--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -79,7 +79,7 @@
       </div>
     </div>
 
-    <script type="module" src="/js/admin/charts/chart.js"></script>
+    <script type="module" src="/js/admin/reports/chart.js"></script>
     <script src="/js/utils/formatPrice.js"></script>
     <script src="/js/utils/PDF.js"></script>
     <script src="/js/utils/excel.js"></script>
