--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -24,12 +24,6 @@
         <label for="fechaHasta" id="labelFechaHasta" style="display:none;">Hasta:</label>
         <input type="date" id="fechaHasta" style="display:none;">
 
-        <label for="tipoGraficoSelect">Tipo de gráfico:</label>
-        <select id="tipoGraficoSelect">
-          <option value="bar">Barras</option>
-          <option value="line">Línea</option>
-        </select>
-
         <label for="mesSelect" id="labelMesSelect" style="display:none;">Selecciona mes:</label>
         <input type="month" id="mesSelect" style="display:none;" />
 
@@ -37,6 +31,13 @@
         <input type="date" id="fechaSelect" style="display:none;"
           value="<%= new Date().toISOString().split('T')[0] %>" />
       </div>
+
+      <label for="tipoGraficoSelect">Tipo de gráfico:</label>
+        <select id="tipoGraficoSelect">
+          <option value="bar">Barras</option>
+          <option value="line">Línea</option>
+          <option value="pie">Pastel</option>
+        </select>
 
       <div class="botones-reporte">
         <button id="btnExcel" class="reporte-tipo no-in-pdf">
