--- a/src/views/admin/brandCategory.ejs
+++ b/src/views/admin/brandCategory.ejs
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="/css/utils/toastify.css">
     <link rel="stylesheet" href="/css/admin/table.css">
     <link rel="stylesheet" href="/css/utils/error.css">
+    <link rel="stylesheet" href="/css/utils/state.css">
+
 
     <div class="main-content">
         <header class="header">
@@ -35,9 +37,10 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th style="width: 30%">ID</th>
-                                <th style="width: 30%">Nombre</th>
-                                <th style="width: 10%">Acciones</th>
+                                <th style="width: 25%;">ID</th>
+                                <th style="width: 25%;">Nombre</th>
+                                <th style="width: 25%;">Estado</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="categoriesTableBody">
@@ -66,10 +69,11 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th style="width: 20%">ID</th>
-                                <th style="width: 20%">Nombre</th>
-                                <th style="width: 25%">Asociadas</th>
-                                <th style="width: 10%">Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 20%;">Nombre</th>
+                                <th style="width: 20%;">Asociadas</th>
+                                <th style="width: 20%;">Estado</th>
+                                <th style="width: 5%;">Acciones</th>
                                 </tr>
                         </thead>
                         <tbody id="brandsTableBody">
