--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -114,6 +114,10 @@
         </div>
     </div>
 
+    <script>
+    window.ADMIN_ROLE = "<%= admin?.rol %>";
+    </script>
+
 <script type="module" src="/js/admin/products/products.js"></script>
 <script src="/js/utils/formatPrice.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
