Estado terminado en variantes

--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/admin/table.css">
   <link rel="stylesheet" href="/css/utils/error.css">
   <link rel="stylesheet" href="/css/admin/results.css">
+  <link rel="stylesheet" href="/css/utils/state.css">
 
   <div class="main-content">
     <header class="header">
@@ -33,11 +34,12 @@
           <table class="product-table">
             <thead>
               <tr>
-                <th style="width: 15%">id</th>
-                <th style="width: 20%">Producto</th>
-                <th style="width: 20%">Color</th>
-                <th style="width: 20%">Cantidad</th>
-                <th style="width: 15%">Imagen</th>
+                <th>id</th>
+                <th>Producto</th>
+                <th>Color</th>
+                <th>Cantidad</th>
+                <th>Imagen</th>
+                <th>Estado</th>
                 <th style="width: 5%">Acciones</th>
               </tr>
             </thead>
