--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -91,7 +91,7 @@
     </div>
 </div>
 
-    <%- include('../../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
     
 </body>
     <script src="/js/store/fav/favView.js" type="module"></script>
