--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -11,7 +11,7 @@
 		<div id="product-root" 
 			data-product-stocks='<%- JSON.stringify(stocksPorColor) %>'
 			data-product-variantes='<%- JSON.stringify(variantesPorColor) %>'
-			data-product-id="<%= producto.id %>">
+			data-product-id="<%= product.id %>">
 			<!-- row -->
 			<div class="row">
 				<!-- Product main img -->
@@ -30,8 +30,8 @@
 				<div id="product-imgs">
 					<% for (const [color, imagen] of Object.entries(imagenesPorColor)) { %>
 						<div class="product-preview"
-							onclick="changeColor({ value: '<%= color %>' }, '<%= producto.id %>')"
-							data-product-id="<%= producto.id %>">
+							onclick="changeColor({ value: '<%= color %>' }, '<%= product.id %>')"
+							data-product-id="<%= product.id %>">
 							<img src="<%= imagen %>" alt="<%= color %>" class="product-img">
 						</div>
 						<% } %>
@@ -41,13 +41,13 @@
 	<!-- Product details -->
 	<div class="col-md-5">
 		<div class="product-details">
-			<h2 class="product-name"><%= producto.nombre %> <%= producto.especificaciones %></h2>
+			<h2 class="product-name"><%= product.nombre %> <%= product.especificaciones %></h2>
 			<div>
 			<div class="product-rating">
 			<% for (let i=1; i <=5; i++) { %>
-			<% if (i <=Math.floor(producto.averageRating)) { %>
+			<% if (i <=Math.floor(product.averageRating)) { %>
 			<i class="fa-solid fa-star"></i>
-			<% } else if (i - producto.averageRating < 1 && i> producto.averageRating) { %>
+			<% } else if (i - product.averageRating < 1 && i> product.averageRating) { %>
 			<i class="fa-regular fa-star-half-stroke"></i>
 			<% } else { %>
 			<i class="fa-regular fa-star"></i>
@@ -55,15 +55,15 @@
 			<% } %>
 			</div>
 			<a class="review-link">
-			(<%= producto.totalReviews %>) Reseña(s)
+			(<%= product.totalReviews %>) Reseña(s)
 			</a>
 			</div>
 			<div>
 				<h3 class="product-price">
-				$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-				<% if (producto.descuento > 0) { %>
+				$<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+				<% if (product.descuento > 0) { %>
 					<del class="product-old-price">
-					$<%= Number(producto.precio / (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+					$<%= Number(product.precio / (1 - product.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
 					</del>
 				<% } %>
 				</h3>
@@ -81,7 +81,7 @@
 					<label>
 						Color
 						<select class="input-select" id="colorSeleccionado"
-							onchange="changeColor(this, '<%= producto.id %>')">
+							onchange="changeColor(this, '<%= product.id %>')">
 							<% colores.forEach(color=> { %>
 								<option value="<%= color %>" <%=color===colorSeleccionado ? 'selected' : '' %>>
 									<%= color %>
@@ -107,17 +107,17 @@
 					<br><br>
 					<div class="add-to-cart">
 						<button class="add-to-cart-btn" id="add-to-cart-btn" 
-						data-id="<%= producto.id %>"
-						data-variante_id="<%= producto.variante_id %>"
-						data-color="<%= producto.color %>"
-						data-ram="<%= producto.ram %>"
-						data-almacenamiento="<%= producto.almacenamiento %>"
-						data-stock="<%= producto.stock %>"
-						data-nombre="<%= producto.nombre %>"
-						data-precio="<%= producto.precio %>"
-						data-impuesto="<%= producto.impuesto %>"
-						data-descuento="<%= producto.descuento %>"
-						data-imagen="<%= producto.imagen %>">
+						data-id="<%= product.id %>"
+						data-variante_id="<%= product.variante_id %>"
+						data-color="<%= product.color %>"
+						data-ram="<%= product.ram %>"
+						data-almacenamiento="<%= product.almacenamiento %>"
+						data-stock="<%= product.stock %>"
+						data-nombre="<%= product.nombre %>"
+						data-precio="<%= product.precio %>"
+						data-impuesto="<%= product.impuesto %>"
+						data-descuento="<%= product.descuento %>"
+						data-imagen="<%= product.imagen %>">
 						<i class="fa fa-shopping-cart"></i> Añadir al carrito
 						</button>
 					</div>
@@ -125,24 +125,23 @@
 				<ul class="product-btns">
 				<li>
 				<a role="button" class="add-to-wishlist" 
-				data-product-id="<%= producto.id %>" 
-                data-product-color="<%= producto.color %>">
-				<i class="fa fa-heart-o"></i>Favoritos</a>
-				</li>
+				data-product-id="<%= product.id %>" 
+                data-product-color="<%= product.color %>">
+				<i class="fa fa-heart-o"></i> Favoritos</a></li>
 
-				<% if (producto.esMovil) { %>
-				<li><a href="#" class="add-to-compare" data-id="<%= producto.id %>">
-					<i class="fa-solid fa-arrow-right-arrow-left"></i>Comparar</a></li>
+				<% if (product.itsMobile) { %>
+				<li><a href="#" class="add-to-compare" data-id="<%= product.id %>">
+					<i class="fa-solid fa-arrow-right-arrow-left"></i> Comparar</a></li>
 				<% } %>
 				</ul>
 
-				<% if (['moviles', 'smarttv', 'laptops', 'consolas', 'tablets', 'otros'].includes(producto.categoria.toLowerCase())) { %>
+				<% if (['moviles', 'smarttv', 'laptops', 'consolas', 'tablets', 'otros'].includes(product.category.toLowerCase())) { %>
 				<ul class="product-links">
 				<li>Categoría:</li>
 				<li>
-				<a href="/store/1?categoria=<%= producto.categoriaId %>">
-					<%= producto.categoria.toLowerCase() === 'moviles' ? 'Móviles' :
-					producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
+				<a href="/store/1?categoria=<%= product.categoriaId %>">
+					<%= product.category.toLowerCase() === 'moviles' ? 'Móviles' :
+					product.category.charAt(0).toUpperCase() + product.category.slice(1) %>
 				</a>
 				</li>
 				</ul>
@@ -161,7 +160,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/intent/tweet?text=<%= encodeURIComponent('Mira este producto: ' + producto.nombre) %>&url=<%= encodeURIComponent('http://localhost:3000' + currentUrl) %>" target="_blank">
+					<a href="https://twitter.com/intent/tweet?text=<%= encodeURIComponent('Mira este product: ' + product.nombre) %>&url=<%= encodeURIComponent('http://localhost:3000' + currentUrl) %>" target="_blank">
 					<i class="fa-brands fa-x-twitter"></i>
 					</a>
 				</li>
@@ -171,7 +170,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="mailto:?subject=<%= encodeURIComponent('Mira este producto: ' + producto.nombre) %>&body=<%= encodeURIComponent('Te comparto este producto que encontré: http://localhost:3000' + currentUrl) %>">
+					<a href="mailto:?subject=<%= encodeURIComponent('Mira este product: ' + product.nombre) %>&body=<%= encodeURIComponent('Te comparto este product que encontré: http://localhost:3000' + currentUrl) %>">
 					<i class="fa-solid fa-envelope"></i>
 					</a>
 				</li>
@@ -186,10 +185,10 @@
 				<!-- product tab nav -->
 				<ul class="tab-nav">
 					<li class="active"><a data-toggle="tab" href="#tab1">Descripción</a></li>
-					 <% if (producto.esMovil) { %>
+					 <% if (product.itsMobile) { %>
 					<li><a data-toggle="tab" href="#tab2">Detalles</a></li>
 					<% } %>
-					<li><a data-toggle="tab" href="#tab3">Reseñas (<%= producto.totalReviews %>)</a></li>
+					<li><a data-toggle="tab" href="#tab3">Reseñas (<%= product.totalReviews %>)</a></li>
 				</ul>
 				<!-- /product tab nav -->
 
@@ -199,14 +198,14 @@
 					<div id="tab1" class="tab-pane fade in active">
 						<div class="row">
 							<div class="col-md-12">
-								<p><%= producto.descripcion %></p>
+								<p><%= product.descripcion %></p>
 							</div>
 						</div>
 					</div>
 					<!-- /tab1  -->
 
 					<!-- tab2  -->
-					<% if (producto.esMovil) { %>
+					<% if (product.itsMobile) { %>
 					<div id="tab2" class="tab-pane fade in">
 						<div class="row">
 							<div class="col-md-12">
@@ -287,9 +286,9 @@
 							<div class="col-md-3">
 								<div id="rating">
 									<div class="rating-avg">
-										<span><%= producto.averageRating.toFixed(1) %></span>
+										<span><%= product.averageRating.toFixed(1) %></span>
 										<div class="rating-stars">
-											<% const avgRating = producto.averageRating || 0; %>
+											<% const avgRating = product.averageRating || 0; %>
 											<% for(let i = 1; i <= 5; i++) { %>
 												<% if(i <= Math.floor(avgRating)) { %>
 													<i class="fa-solid fa-star"></i>
@@ -308,11 +307,11 @@
 											distribution[i] = 0;
 										}
 										
-										producto.ratingDistribution.forEach(item => {
+										product.ratingDistribution.forEach(item => {
 											distribution[item.calificacion] = item.count;
 										});
 										
-										const totalReviews = producto.totalReviews;
+										const totalReviews = product.totalReviews;
 										%>
 										
 										<% for(let stars = 5; stars >= 1; stars--) { %>
@@ -339,7 +338,7 @@
 
 							<!-- Reviews -->
 							<div class="col-md-6">
-								<div id="reviews" data-product-id="<%= producto.id %>"></div>
+								<div id="reviews" data-product-id="<%= product.id %>"></div>
 							</div>
 							<!-- /Reviews -->
 
@@ -348,7 +347,7 @@
 								<div class="col-md-3">
 											<div id="review-form">
 												<form class="review-form" id="reviewForm">
-													<input type="hidden" name="producto_id" value="<%= producto.id %>">
+													<input type="hidden" name="product_id" value="<%= product.id %>">
 													<input type="hidden" name="review_id" id="review_id" value="">
 													<textarea class="input" name="comentario" id="comentarioInput" placeholder="Tu reseña" required></textarea>
 													<input type="hidden" name="calificacion" id="calificacionInput">
@@ -396,46 +395,38 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h3 class="title">Productos Relacionados</h3>
+						<h3 class="title">productos que podrían interesarte</h3>
 					</div>
 				</div>
-				<% if (productRelacionados && productRelacionados.length > 0) { %>
-					<% productRelacionados.forEach(producto => { %>
+				<% if (productRelated && productRelated.length > 0) { %>
+					<% productRelated.forEach(product => { %>
 						<!-- product -->
 						<div class="col-md-3 col-xs-6">
 							<div class="product">
 								<div class="product-img">
-									<a href="/product/<%= producto.id %>?color=<%= producto.color %>">
-										<img src="<%= producto.imagen %>" alt="<%= producto.nombre %>">
+									<a href="/product/<%= product.id %>?color=<%= product.color %>">
+										<img src="<%= product.imagen %>" alt="<%= product.nombre %>">
 										<div class="product-label">
-										<% 
-										if (producto.descuento > 0) { 
-										%>
-											<span class="sale">-<%= producto.descuento %>%</span>
-										<% } %>
-				
-										<% 
-										const fechaCreacion = new Date(producto.fecha);
-										const hoy = new Date();
-										const diferenciaDias = (hoy - fechaCreacion) / (1000 * 60 * 60 * 24);
-										if (diferenciaDias <= 30) { 
-										%>
-											<span class="new">Nuevo</span>
-										<% } %>
-									</div>
+                                            <% if (product.descuento > 0) { %>
+                                            <span class="sale">-<%= product.descuento %>%</span>
+                                            <% } %>
+                                            <% if (product.itsNew) { %>
+                                            <span class="new">Nuevo</span>
+                                            <% } %>
+                                        </div>
 								</div>
 								<div class="product-body">
 									<p class="product-category">
-										<%= producto.categoria === 'moviles' ? 'Móviles' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
+										<%= product.category === 'moviles' ? 'Móviles' : product.category.charAt(0).toUpperCase() + product.category.slice(1) %>
 									</p>
 									<h3 class="product-name">
-											<%= producto.nombre %> <%= producto.especificaciones %>
+											<%= product.nombre %> <%= product.especificaciones %>
 										</h3>
 									<h4 class="product-price">
-                                        $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
-                                        <% if (producto.descuento > 0) { %>
-                                        <del class="product-old-price">$<%= Number(producto.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
-                                        <% } %>
+									$<%= Number(product.precio).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+									<% if (product.descuento > 0) { %>
+										<del class="product-old-price">$<%= Number(product.precio / (1 - product.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
+									<% } %>
                                     </h4></a>
 								</div>
 							</div>
@@ -443,7 +434,7 @@
 						<!-- /product -->
 					<% }); %>
 				<% } else { %>
-					<p>No hay productos relacionados disponibles en esta categoría.</p>
+					<p>No hay products relacionados disponibles en esta categoría.</p>
 				<% } %>
 			</div>
 		</div>
